--- a/public/chat.html
+++ b/public/chat.html
@@ -11,19 +11,20 @@
     />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo">
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" type="image/png" href="img/favicon.png">
     <title>FILMSTRIP - Chat for Film Lovers</title>
   </head>
   <body>
     <div class="chat-container">
       <header class="chat-header">
-        <h1>FILMSTRIP</h1>
+        <h1><img src="img/Group 14.png" alt="Logo"/> FILMSTRIP</h1>
         <a id="leave-btn" class="btn">Leave Room</a>
       </header>
       <main class="chat-main">
         <div class="chat-sidebar">
-          <h3><i class="fas fa-comments"></i> Room Name:</h3>
+          <h4><img src="img/Group 7.png" alt="user"/>Room Name:</h4>
           <h2 id="room-name"></h2>
-          <h3><i class="fas fa-users"></i> Users:</h3>
+          <h3><img src="img/Group 13.png" alt="user"/>Users:</h3>
           <ul id="users"></ul>
         </div>
         <div class="chat-messages"></div>
